# aoc

./: .gitignore  Cargo.toml  index.html  index.js  package.json  tsconfig.json  vite.config.ts
scripts/: getInput.js
src/: lib.rs
